# pyecobulles

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements_dev.txt
.github/workflows/: ci.yml  publish.yml
pyecobulles/: __init__.py  auth_ids.py  client.py
tests/: test_client.py
